--- a/index.html
+++ b/index.html
@@ -1,46 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HIMANSHI PORTFOLIO</title>
+    <title>Healthy Life - Wellness Redefined</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
     <header>
-       <H1>PORTFOLIO</H1> 
+        <div class="overlay">
+            <h1>Healthy Life</h1>
+            <p>Your Journey to Wellness Begins Here</p>
+            <a href="#services" class="btn">Explore Services</a>
+        </div>
     </header>
-    <section id="about">
-        <h2>Himanshi Gupta</h2>
-        <p>Web Developer | Cloud Enthusiast</p>
-        <p>Hello! Iam a BCA student passionate about technology, cloud computing and web development.</p>
-    </section>
-
-    <section id="skill">
-        <h2>skills</h2>
+    <nav>
         <ul>
-            <li> HTML , CSS</li>
-            <LI>PYTHON</LI>
-            <LI> AWS CLOUD COMPUTING</LI>
+            <li><a href="#About">About</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
+    </nav>
+
+    <section id="services" class="services">
+        <h2><u>Health Services</u> </h2>
+        <div class="service-container">
+            <div class="service-box">
+                <h3>🍏 Nutrition Plans</h3>
+                <p>Personalized meal plans to improve your diet.</p>
+            </div>
+            <div class="service-box">
+                <h3>🏋 Fitness Programs</h3>
+                <p>Customized workout plans for a fit lifestyle.</p>
+            </div>
+            <div class="service-box">
+                <h3>🧘 Mental Wellness</h3>
+                <p>Mindfulness & stress-relief techniques.</p>
+            </div>
+        </div>
+    <section id="About" class="section">
+        <h2><u>About Us</u></h2>
+            <p>We help individuals achieve a balanced and healthier life with expert guidance.
+                Initially, the Ministry of Health and Family Welfare consisted of two departments, each led by a Secretary
+                of the Government of India: the Department of Health and Family Welfare and the Department of Health
+                Research. On August 7, 2014, through an extraordinary gazette notification, the Department of AIDS Control
+                was merged with the Department of Health and Family Welfare and is now known as the National AIDS Control
+                Organization (NACO).
+            </p>
+    </section>
+    <section id="features" class="section">
+        <h2><u> Features </u></h2>
+        <div class="feature-box">
+            <h3>Online appointment:</h3>
+            <p> This feature makes booking appointments more convenient and easy for potential patients. For easy
+                appointment management, you can straight away add them to the calendar with proper integration.
+            </p>
+        </div>
+        <div class="feature-box">
+            <h3>Opening Hours:</h3>
+            <p>This will help the users to the hospital’s active opening hours, making it easy for them to book their
+                online appointment slot.</p>
+        </div>
+        <div class="feature-box">
+            <h3>Emergency care Information:</h3>
+            <p>Sometimes it would be as simple as directing the patient to their local emergency ward.If you offer
+                emergency services list them boldly and clearly.</p>
+        </div>
     </section>
 
-    <section ID="PROJECT">
-        <H2> PROJECTS</H2>
-        <DIV CLASS="PROJECT">
-            <H3> Cloud Based Image Processing</H3>
-            <H3> Deployed a Fully responsive static website using aws s3 and other like that.</H3>
-        </DIV>
+    <section id="contact" class="section">
+        <h2><u>Contact Us</u> </h2>
+        <p>Have questions? <a href="#">Get in touch</a></p>
     </section>
-    
-    <section id="contact">
-        <h2> contact</h2>
-        <p> Email : ghimanshi9044@gmail.com</p>
-        <p>Address : Kanpur,Uttar Pradesh</p>
-    </section>
-
+    <br>
     <footer>
-        <p> © 2025 Himanshi Gupta. All Right reserved</p>
+        <p>
+        &copy;2025 Landing Page Project| All Right Reserved</p>
     </footer>
+
 </body>
+
 </html>
